PlayReady encryption fixes
Use "weird" KeyID little endianness when generating Keys and Checksums

Update script to take PR version